[workspace]
resolver = "2"
members = ["juno"]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["flowerinthenight <root@flowerinthenight.com>"]
license = "Apache-2.0"
repository = "https://github.com/flowerinthenight/juno"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
crossbeam-channel = "0.5.15"
ctrlc = "3.5.1"
env_logger = "0.11.8"
google-cloud-spanner = { package = "gcloud-spanner", version = "1.4.1" }
hedge_rs = "1.2.12"
log = "0.4.28"
num_cpus = "1.17.0"
regex = "1.12.2"
# We don't depend on rustls, but it's panicking without this.
# https://github.com/rustls/rustls/issues/1938
rustls = { version = "0.23.34", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }
scopeguard = "1.2.0"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
