[package]
name = "juno"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
ctrlc = "3.4.6"
env_logger = "0.11.8"
hedge_rs = "0.2.1"
log = "0.4.27"
tokio = { version = "1.44.2", features = ["full"] }
google-cloud-spanner = { package="gcloud-spanner", version="1.1.0" }
time = "0.3.41"
scopeguard = "1.2.0"
uuid = { version = "1.16.0", features = ["v4"] }
crossbeam-channel = "0.5.14"
num_cpus = "1.16.0"
regex = "1.11.1"
