[package]
name = "juno"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
env_logger = { workspace = true }
hedge_rs = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
google-cloud-spanner = { workspace = true }
time = { workspace = true }
scopeguard = { workspace = true }
uuid = { workspace = true }
crossbeam-channel = { workspace = true }
num_cpus = { workspace = true }
regex = { workspace = true }
rustls = { workspace = true }
